# Customer_Churn_Prediction

./: pyproject.toml
data/raw/: version_2.csv  version_clean.csv
notebooks/: exploratory_data_analysis.ipynb  models.ipynb
